--- a/style.css
+++ b/style.css
@@ -58,8 +58,22 @@ form{
 }
 
 input{
-    margin: 20px;
     padding: 10px;
     border: 2px solid gray;
     border-radius: 10px;
+    transition: all ease-in-out .5s;
+}
+
+
+label{
+    margin-top: 15px;
+}
+
+.calcular{
+   margin: 30px;
+   cursor: pointer;
+}
+
+.calcular:hover{
+    background-color: #b9b6b6;
 }
